# Portentia

./: .cproject  .project  CMakeLists.txt
cmake_modules/: FindSFML.cmake  FindSpatialIndex.cmake
docs/: Ancient-Language.odt  Chapter-1-Forward.odt  Chapter-2-Forward.odt  Chapter-3-Forward.odt  Chapter-4-Forward.odt  Chapter-5-Forward.odt  Chapters-Backwards.odt  Debate-System.odt  Overview.odt
res/: map_tavern.json
script/: hello.lua
src/: main.cpp
src/core/: GameEngine.cpp  GameEngine.hpp  LuaBindings.cpp  LuaBindings.hpp
src/geom/: Geom.cpp  Geom.hpp
src/index/: LazySpatialIndex.hpp
src/platform/: Fonts.hpp
src/slices/: ConsoleSlice.cpp  ConsoleSlice.hpp  EuclideanMenuSlice.cpp  EuclideanMenuSlice.hpp  Slice.hpp  TileMapSlice.cpp  TileMapSlice.hpp  WalkableMapSlice.cpp  WalkableMapSlice.hpp
src/widgets/: AbstractGameObject.hpp  CircleGameObject.cpp  CircleGameObject.hpp  FpsCounter.cpp  FpsCounter.hpp  RectangleGameObject.cpp  RectangleGameObject.hpp
